# MLOPs

./: .env  .env.example  .gitignore  Data Loading and Transformation.ipynb  Data Loading and Transformation.py  David_Harold_FinalProjectMSDS2025A_Notebook (1).ipynb  Feature Engineering.ipynb  Feature Engineering.py  MLProject1.ipynb  Model Inference.ipynb  Model Inference.py  Model Training.ipynb  Model Training.py  README.md  docker-compose.yml  pyproject.toml  run_pipeline.ipynb  run_pipeline.py
MLOPs_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
MLOPs_pipeline/MLOPs_pipeline/: assets.py  definitions.py
MLOPs_pipeline/MLOPs_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MLOPs_pipeline/cache/history/: runs.db
MLOPs_pipeline/cache/schedules/: schedules.db
MLOPs_pipeline/tmpbvli1rbd/history/: runs.db
MLOPs_pipeline/tmpbvli1rbd/schedules/: schedules.db
MLOPs_pipeline/tmpbvli1rbd/storage/: preprocessed_data
MLOPs_pipeline/tmpjn5rzcu1/history/: runs.db
MLOPs_pipeline/tmpjn5rzcu1/schedules/: schedules.db
MLOPs_pipeline/tmpjn5rzcu1/storage/: employee_data  model_predictions  preprocessed_data  trained_model
minio_data/.minio.sys/: format.json
mlflow/: Dockerfile  api.py  classification_report.csv  feature_order.pkl  random_forest_model.pkl  register_model.py  scaler.pkl  test_api.py  train_mlflow.py
mlflow/fastapi/: Dockerfile  api.py  requirements.txt  scaler.pkl
mlflow/mlruns/0/: meta.yaml
mlruns/0/: meta.yaml
postgres_data/: postmaster.pid
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
(+111 files in other folders)
